<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>
    <groupId>br.com.marcoshssilva</groupId>
    <artifactId>mhpasswordmanager</artifactId>
    <version>1.0.0-RC-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>MHPasswordManager</name>
    <description>Parent aggregator for MHPasswordManager modules</description>
    <properties>
        <java.version>17</java.version>
        <spring-boot.version>2.7.18</spring-boot.version>
        <spring-cloud.version>2021.0.6</spring-cloud.version>
        <lombok.version>1.18.38</lombok.version>
    </properties>
    <modules>
        <module>mhpasswordmanager-api-gateway</module>
        <module>mhpasswordmanager-config-services</module>
        <module>mhpasswordmanager-email-service</module>
        <module>mhpasswordmanager-file-service</module>
        <module>mhpasswordmanager-oauth2-server</module>
        <module>mhpasswordmanager-password-service</module>
        <module>mhpasswordmanager-service-registry</module>
        <module>mhpasswordmanager-user-service</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${spring-boot.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
